--- a/Tips project/Base.lproj/Main.storyboard
+++ b/Tips project/Base.lproj/Main.storyboard
@@ -132,11 +132,37 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </tableView>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Tips" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lDA-8H-wwq">
+                                <rect key="frame" x="77" y="106" width="97" height="34"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="opaqueSeparatorColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="74b-ZO-4ta">
+                                <rect key="frame" x="254" y="170" width="58" height="35"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="gray" title="Calc"/>
+                                <connections>
+                                    <action selector="calculateTipsPerHour:" destination="8kA-pM-isJ" eventType="touchUpInside" id="Clu-wL-RwB"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O2W-C6-rhR">
+                                <rect key="frame" x="94" y="235" width="229" height="44"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="JSv-DJ-PVh"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
                     <connections>
+                        <outlet property="calcTips" destination="74b-ZO-4ta" id="rOn-Ud-Axn"/>
+                        <outlet property="enterTips" destination="lDA-8H-wwq" id="7y5-eA-huj"/>
+                        <outlet property="tipPerHour" destination="O2W-C6-rhR" id="aq8-Mk-Fyy"/>
                         <outlet property="txtlabl" destination="pvB-t3-yYR" id="kAU-aK-zR6"/>
                         <outlet property="workersTableView" destination="HUf-wN-CyQ" id="m7Z-7f-Jby"/>
                     </connections>
